--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PDelicia">
+        android:theme="@style/Theme.AppCompat">
+
+        <!--  android:theme="@style/Theme.AppCompat.NoActionBar" -->
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
