Login Framework terminado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name="com.ramirezf.pdelicia.activities.RegisterActivity"></activity>
+        <activity android:name="com.ramirezf.pdelicia.activities.RegisterActivity" android:screenOrientation="portrait"></activity>
         <!-- android:theme="@style/Theme.AppCompat.NoActionBar" -->
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -36,9 +29,9 @@
         <activity
             android:name="com.ramirezf.pdelicia.activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name="com.ramirezf.pdelicia.activities.LoginActivity" />
-        <activity android:name="com.ramirezf.pdelicia.activities.PrincipalActivity" />
-        <activity android:name="com.ramirezf.pdelicia.MainActivity">
+        <activity android:name="com.ramirezf.pdelicia.activities.LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name="com.ramirezf.pdelicia.activities.PrincipalActivity" android:screenOrientation="portrait" />
+        <activity android:name="com.ramirezf.pdelicia.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
